Update according to SonarLint comments